# sentimentanalyser

backend/: README.md  auth.py  check.py  dockerfile  model.py  pyproject.toml  requirements.txt  requirments.txt  test.py
frontend/: README.md  dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/api/: index.js
frontend/src/components/: LoginForm.js  RegisterForm.js  SentimentForm.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: Adminpage.js  Dashboard.js  Home.js  Login.js  LoginHistory.js  Register.js
frontend/src/styles/: Dashboard.css  Home.css  Register.css
